--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://43.204.144.34:9980/mithuntechnologies/repository/walmart-releases/</url>
+	      <name>Sri balatripura bricks Releases Nexus Repository</name>
+	      <url>http://3.110.174.59:8081/repository/krishbricks/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://43.204.144.34:9980/mithuntechnologies/repository/walmart-snapshot/</url>
+	      <name>Sri balatripura bricks Snapshot Nexus Repository </name>
+	      <url>http://3.110.174.59:8081/repository/krishbricks-snap/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
