--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Sri balatripura bricks Releases Nexus Repository</name>
+	      <name>Sri balatripura Releases Nexus Repository</name>
 	      <url>http://3.110.174.59:8081/repository/krishbricks/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Sri balatripura bricks Snapshot Nexus Repository </name>
+	      <name>Sri balatripura  Snapshot Nexus Repository </name>
 	      <url>http://3.110.174.59:8081/repository/krishbricks-snap/</url>
 	    </snapshotRepository>
 	    
